# irrigation-system

./: .env  Cargo.toml  LICENSE  README.md  init.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/ControlPanel/: ControlPanel.tsx
frontend/src/components/ControlPanel/components/: ManualOverride.tsx  Parameters.tsx
frontend/src/components/Graph/: Graph.tsx
frontend/src/components/Graph/@types/: data-type.ts
frontend/src/components/Graph/components/: AreaPlot.tsx
frontend/src/constants/: url.ts
src/: lib.rs  main.rs
src/database/: measurements.rs  mod.rs
src/models/: irrigation.rs  measurement.rs  measurements.rs  mod.rs  preference.rs  sensor.rs
src/repository/: mongodb.rs  mongodb_repo.rs
src/routes/: irrigations.rs  measurements.rs  mod.rs  preferences.rs  sensors.rs
